--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Mundo</title>
-</head>
-<body>
-    
-    <?php
-    echo "Hola mundo, soy Jose Vielman";
-    ?>
-    <img src="perro.jpg" alt="Perro" width="500" height="600">
-</body>
-</html>
+<?php
+echo "Hola mundo, soy [Jose Vielman]";
+?>
+<h1> Hola Mundo, Soy Jose Vielman </h1>
+<img src="Yoshi.jpg" alt="Yoshi" width="500" height="600">
